--- a/index.html
+++ b/index.html
@@ -1,66 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Calculator</title>
-  <meta name="description" content="Simple Calculator With Dark Mode." />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="assets/calculator.ico">
-  <link rel="stylesheet" href="styles/dark.css" id="theme" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
+    <title>Calculator</title>
+<!-- added css file -->
+    <link rel="stylesheet" href="styles/dark.css" id="theme">    
+<!-- font awesome -->
+    <script src="https://kit.fontawesome.com/f383b6eabf.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div class="wrapper">
-    <div class="container">
-      <div class="header-container">
-        <!-- This heading also notifies about the theme change.-->
-        <h1 id="toast">Calculator</h1>
-        <div class="top-buttons">
-          <a href="https://github.com/agentgrey/Calculator">
-            <img src="assets/GitHubLight.svg" alt="Sun Icon" height="22.5" width="22.5" id="github-icon">
-          </a>
-          <button type="button" onclick="changeTheme()" class="theme-button">
-            <img src="assets/SunIcon.svg" alt="Theme Icon" height="19" width="19" id="theme-icon">
-          </button>
+    <div class="heading">
+        <h1>Calculator</h1>
+        <div class="options">
+            <i id="theme-icon" class="fa-solid fa-sun" onclick="changeTheme()"></i>
+            <a href="https://github.com/agentgrey/Calculator">
+                <i class="fa-brands fa-github"></i>
+            </a>
         </div>
-      </div>
-      <div class="first-row">
-        <input type="text" name="result" id="result" placeholder="Result" readonly />
-        <input type="button" value="C" onclick="result.value=''" id="clear-button" />
-      </div>
-      <div class="second-row">
-        <input type="button" value="1" onclick="liveScreen(1)" />
-        <input type="button" value="2" onclick="liveScreen(2)" />
-        <input type="button" value="3" onclick="liveScreen(3)" />
-        <input type="button" value="+" onclick="liveScreen('+')" />
-      </div>
-      <div class="third-row">
-        <input type="button" value="4" onclick=" liveScreen(4)" />
-        <input type="button" value="5" onclick=" liveScreen(5)" />
-        <input type="button" value="6" onclick=" liveScreen(6)" />
-        <input type="button" value="-" onclick="liveScreen('-')" />
-      </div>
-      <div class="fourth-row">
-        <input type="button" value="7" onclick="liveScreen(7)" />
-        <input type="button" value="8" onclick="liveScreen(8)" />
-        <input type="button" value="9" onclick=" liveScreen(9)" />
-        <input type="button" value="x" onclick="liveScreen('*')" />
-      </div>
-      <div class="fifth-row">
-        <input type="button" value="/" onclick="liveScreen('/')" />
-        <input type="button" value="0" onclick="liveScreen(0)" />
-        <input type="button" value="." onclick="liveScreen('.')" />
-        <input type="button" value="=" onclick="calculate(result.value)" />
-      </div>
     </div>
-  </div>
-  <script src="scripts/script.js">
-  </script>
+    <div class="box">
+    <!-- first row -->
+        <div class="first-row">
+            <input type="text" name="result" id="result" placeholder="Result" >
+            <input type="button" value="AC" id="clear-button" onclick="result.value='' ">
+        </div>
+    <!-- second row -->
+        <div class="buttons">
+        <div class="second-row">
+            <input type="button" value="1" onclick="display(1)">
+            <input type="button" value="2" onclick="display(2)">
+            <input type="button" value="3" onclick="display(3)">
+            <input type="button" value="+" onclick="display('+')">
+        </div>
+    <!-- third row -->
+        <div class="third-row">
+            <input type="button" value="4" onclick="display(4)">
+            <input type="button" value="5" onclick="display(5)">
+            <input type="button" value="6" onclick="display(6)">
+            <input type="button" value="-" onclick="display('-')">
+        </div>
+    <!-- fourth row -->
+        <div class="fourth-row">
+            <input type="button" value="7" onclick="display(7)">
+            <input type="button" value="8" onclick="display(8)">
+            <input type="button" value="9" onclick="display(9)">
+            <input type="button" value="x" onclick="display('*')">
+        </div>
+    <!-- fifth row -->
+        <div class="fifth-row">
+            <input type="button" value="/" onclick="display('/')">
+            <input type="button" value="0" onclick="display(0)">
+            <input type="button" value="." onclick="display('.')">
+            <input type="button" value="=" onclick="calculate(result.value)">
+        </div>
+        </div>
+    
+    </div>
+
+<!-- added javascript file-->
+    <script src="script/script.js"></script>
 </body>
+
 
 </html>
